www/style/style.default.css
/* ... */
#main_users_online {
   float:left;
   border-right: 1px solid #000000;
   padding-right: 1em;
}

#main_users_online A,
#main_search INPUT {
   color: #000000;
   text-decoration:none;
   background: #CDE9A7;
}

#main_search INPUT {
   position: relative;
   top: -3px;
}

#navbar_main_wrapper {
  position: relative;
  left: 0px;
  top: 0px;
  background-color: #2E2E2E;
}

#navbar_main {
  position: relative;
  left: 30px;
  top: 0px;
  background-color: #2e2e2e;
  list-style: none;
  line-height: normal;
  height: 15px;
  margin: 0;
  padding: 0;
  width: 95%;
}

#navbar_main LI {
   position; relative;
   float:left;
   height: 15px;
}

#navbar_main LI A {
   position: relative;
   display: inline;
   color:#4444444;
   text-decoration:none;
   font-weight:bold;
   padding-left: 0.5em;
   padding-right: 0.5em;
   height: 15px;
   float: left;
}

#navbar_main LI.selected, .navbar_selected {
   background-color: #cde9a7;	    
   height: 15px;
   float: left;
   display: inline;
   _width: 100px; 
}

#navbar_main LI.selected A {
   color: #2e2e2e;
   height: 15px;
}

#navbar_main LI.unselected A {
   color: #ffffff;
   height: 15px;
}

#navbar_main A:hover,
#navbar_main A:active,
#navbar_main LI.selected A:link,
#navbar_main LI.selected A:visited {
   color:#2e2e2e;
}

#navbar_main LI.selected A:link,
#navbar_main LI.selected A:visited {
   position:relative;
   z-index:102;
   float: left;
}

#navbar_sub_wrapper {
  position: relative;
  width: 100%;
  height: 20px;
  background-color: #CDE9A7;
  z-index: 101;
  border-bottom: 1px solid #000000;
}

#navbar_sub {
  position: absolute;
  right: 0;
  margin: 0;
  bottom: -6px;
  list-style: none;
  line-height: normal;

}

#alphabar {
  position: absolute;
  left: 0;
  margin: 0;
  bottom: -6px;
  list-style: none;
  line-height: normal;
}

#navbar_sub LI, #alphabar LI {
   margin: 0;
   float: left;
}
#navbar_sub LI A, #alphabar LI A {
   position: relative;
   display:block;
   text-decoration:none;
   font-weight:bold;
   margin:0;
   padding:0.25em 0.5em;
   top: -4px;
}

#alphabar .navbar_selected {
   _width: 20px;
}

#navbar_sub LI.selected, 
#navbar_sub .navbar_selected, 
#alphabar LI.selected, 
#alphabar .navbar_selected {
	background: #ffffff;	    
}

#navbar_sub LI.selected A,
#alphabar LI.selected A {
	color: #2e2e2e;
}

#navbar_sub LI.unselected A
#alphabar LI.unselected A {
	color: #2e2e2e;
}


#main_header {
   margin: 0;
   background: #cde9a7;
   width: 100%;
}

#main_title, #main_context_bar, #whosonline_class {
	    display: none;
}

#slave {
      background: #ffffff;
}


#footer {
  text-align: center;
  margin-top: 1em;
}

#footer, #footer A {
  color: #ffffff;
}

#slave {

}

#slave_content {
  position: relative;
  padding-left: 30px;
  padding-right: 30px;
  min-height: 500px;
}

.component {
  position: relative;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 15px;
  padding-bottom: 10px;
}
.component_header_rounded {
  background-color: #2e2e2e;
  color: #ffffff;
  font-size: 16pt;
}

.component_header {
   position: relative;
   height: 30px;
}

.component_title {
  position: relative;
  top: -1pt;
  left: 2pt;
  float: left;
}
.component_icons {
  float: right;
}
.component_icons a,
.component_icons div.icon_seperator {
  float: left;
  margin-left: 2pt;
  margin-right: 2pt;
  color: #ffffff;
  font-size: 50%;
  text-decoration: none;
}

/* component icons */
.component_icons .icon_maximize {
  display: block;
  width: 15px;
  height: 15px;
  background: url('/intranet/images/component-maximize.gif') no-repeat;
  text-indent: -5000px;
}
.component_icons .icon_minimize {
  display: block;
  width: 15px;
  height: 15px;
  background: url('/intranet/images/component-minimize.gif') no-repeat;
  text-indent: -5000px;
}
.component_icons .icon_left {
  display: block;
  width: 15px;
  height: 15px;
  background: url('/intranet/images/component-left.gif') no-repeat;
  text-indent: -5000px;
}
.component_icons .icon_right {
  display: block;
  width: 15px;
  height: 15px;
  background: url('/intranet/images/component-right.gif') no-repeat;
  text-indent: -5000px;
}
.component_icons .icon_up {
  display: block;
  width: 15px;
  height: 15px;
  background: url('/intranet/images/component-up.gif') no-repeat;
  text-indent: -5000px;
}
.component_icons .icon_down {
  display: block;
  width: 15px;
  height: 15px;
  background: url('/intranet/images/component-down.gif') no-repeat;
  text-indent: -5000px;
}
.component_icons .icon_close {
  display: block;
  width: 15px;
  height: 15px;
  background: url('/intranet/images/component-close.gif') no-repeat;
  text-indent: -5000px;
  background-color: #7aa054;
}
.component_icons .icon_seperator {
  width: 1px;
  height: 15px;
  background: url('/intranet/images/component-seperator.gif') no-repeat;
  text-indent: -5000px;
  background-color: #7aa054;
}

.component_clear {
  clear: both;
}

.component_body {
  z-index: 100;
  border-left: solid 1px #2e2e2e;
  border-right: solid 1px #2e2e2e;
  padding-bottom: 10px;
  overflow: auto;
}
.component_body ul {
  margin: 0;
  padding-right: 1em;
  padding-top: 1em;
  padding-left: 2em;
}

.component_footer {
  position: relative;
  border: solid 1px #2e2e2e;
  height: 10px;
  color: #2e2e2e;
}
.component_footer_hack {
  position: relative;
  z-index: 101;
  border-top: solid 3px #fff;
  height: 3px;
  top: -3px;
  width: 100%;
}

.rowtitle,
.list-header,
.table-header,
.cal-month-title-text {
   font-size: 10pt; 
   color: #2e2e2e; 
   background-color: #cccac1; 
   font-weight: bold;
}

.cal-table-display {
   width: 100%
}

/* filter & lists */

.filter {
   position: absolute;
   right: 0px;
   top: 0px;
   width: 250px;
   background-color: #CDE9A7;
   margin: 15px 5px 10px;
}

.filter ul {
   padding-left: 1em;
}

.filter-block .form-label, 
.filter-block .form-widget, 
.filter-block select, 
.filter-block input {
   background-color: #CDE9A7;
}

.filter-block  select,
.filter-block  input {
  border: solid black 1px;
}
/* ... */

